--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,7 +8,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/passport": "^12.4",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^1.1",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
